--- a/build.yaml
+++ b/build.yaml
@@ -7,7 +7,7 @@
 #
 board: [ "nice_nano_v2" ]
 shield: [ "fc660" ]
-# include:
-#   - board: nice_nano_v2
-#     shield: fc660
+include:
+  - board: nice_nano_v2
+    shield: fc660
 ---
