--- a/boards/shields/fc660/fc660.zmk.yml
+++ b/boards/shields/fc660/fc660.zmk.yml
@@ -2,6 +2,8 @@ file_format: "1"
 id: fc660
 name: fc660
 type: shield
-requires: [nice_nano_v2]
+requires: [pro_micro]
+exposes: [i2c_oled]
 features:
   - keys
+  - display
